# aws-s3-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: publish.yml  test-publish.yml  test.yml
docs/source/: buckets.rst  conf.py  delete.rst  download.rst  index.rst  introduction.rst  list.rst  modules.rst  move.rst  objects.rst  read.rst  requirements.txt  upload.rst  utils.rst  write.rst
s3_tools/: __init__.py  delete.py  download.py  list.py  move.py  read.py  upload.py  utils.py  write.py
s3_tools/buckets/: check.py  create.py  delete.py  list.py
s3_tools/objects/: check.py  copy.py  delete.py  download.py  list.py  move.py  presigned_url.py  read.py  upload.py  write.py
tests/resources/: mock_file.csv
tests/unit/: conftest.py  test_download.py  test_list.py  test_move.py  test_read.py  test_upload.py  test_utils.py  test_write.py
tests/unit/buckets/: test_check_bucket.py  test_create_bucket.py  test_delete_bucket.py  test_list_buckets.py
tests/unit/objects/: test_check.py  test_check_objects.py  test_copy_objects.py  test_delete_objects.py  test_download.py  test_download_objects.py  test_list_objects.py  test_move_objects.py  test_presigned_url.py  test_read_objects.py  test_upload.py  test_upload_objects.py  test_write_objects.py
