[tool.poetry]
name = "aws-s3-tools"
version = "0.3.0"
description = "AWS S3 tools package"
authors = ["Daniel Ferrari"]
maintainers = ["Daniel Ferrari, Carlos Alves, Tomás Osório"]
license = "MIT"

readme = "README.md"

packages = [
    { include = "s3_tools" }
]

homepage = "https://github.com/dlite-tools/aws-s3-tools"
repository = "https://github.com/dlite-tools/aws-s3-tools"
documentation = "https://aws-s3-tools.readthedocs.io/en/latest/index.html"

keywords = ["aws", "s3", "tools", "package"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.25"
ujson = "^5"
rich = {version = "^13", optional = true}

[tool.poetry.extras]
progress = ["rich"]

[tool.poetry.group.dev.dependencies]
flake8 = "*"
moto = "*"
mypy = "*"
pydocstyle = "*"
pytest = "*"
pytest-cov = "*"
toml = "*"
sphinx-rtd-theme = "*"
sphinx = "*"
requests = "*"
types-requests = "*"
types-ujson = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aws-s3-tools]
copyright = "2021, Daniel Ferrari"
