[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aws-s3-tools"
version = "0.3.1"
description = "AWS S3 tools package"
readme = "README.md"
requires-python = "<4.0,>=3.8"
authors = [
    {name = "Daniel Ferrari"},
]
maintainers = [
    {name = "Daniel Ferrari, Carlos Alves, Tomás Osório"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = [
    "aws",
    "s3",
    "tools",
    "package",
]
license = {text = "MIT"}
dependencies = [
    "boto3<2.0,>=1.35",
    "ujson<6,>=5",
]

[project.urls]
homepage = "https://github.com/dlite-tools/aws-s3-tools"
repository = "https://github.com/dlite-tools/aws-s3-tools"
documentation = "https://aws-s3-tools.readthedocs.io/en/latest/index.html"

[project.optional-dependencies]
progress = [
    "rich<14,>=13",
]

[dependency-groups]
dev = [
    "moto[s3]",
    "mypy",
    "pytest",
    "pytest-cov",
    "requests",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "toml",
    "types-requests",
    "types-ujson",
]

[tool.pdm.build]
includes = ["s3_tools"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
src = ["s3_tools", "tests/unit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "D",     # docstring
    "F",     # flake8
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I001",  # isort
    "C90",   # mccabe (complexity)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"test_*.py" = ["D10"]
"conftest.py" = ["D10"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
allow_redefinition = true
strict_optional = false

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.run]
branch = true
source = ["s3_tools"]

[tool.aws-s3-tools]
copyright = "2021, Daniel Ferrari"
